# tauri-app

./: bun.lockb  package.json
.github/workflows/: main.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
